[package]
name = "meme-rs"
version = "0.1.0"
authors = ["Nisheeth Barthwal <nbaztec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.23.14", default-features = true }
imageproc = "0.22.0"
rusttype = "0.9.2"
