[package]
name = "meme-rs"
version = "0.1.0"
authors = ["Nisheeth Barthwal <nbaztec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.23.14", default-features = true }
imageproc = "0.22.0"
rusttype = "0.9.2"
rand = "0.8.3"
md5 = "0.7.0"
conv = "0.3.3"
serde = {version= "1.0.125", features = ["derive"]}
serde_yaml = "0.8.17"
tokio = {version="1.5.0",features = ["full"]}
warp = "0.3.1"