[package]
authors = ["Nisheeth Barthwal <nbaztec@gmail.com>"]
edition = "2018"
name = "meme-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
conv = "0.3.3"
image = {version = "0.23.14", default-features = true}
imageproc = "0.22.0"
md5 = "0.7.0"
rand = "0.8.3"
reqwest = {version = "0.11.13", features = ["blocking"]}
rusttype = "0.9.2"
serde = {version = "1.0.125", features = ["derive"]}
serde_yaml = "0.8.17"
tokio = {version = "1.23.0", features = ["macros", "rt-multi-thread"]}
warp = "0.3.1"

[[bin]]
name = "meme-gen"
path = "src/bin/cli.rs"
